sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:11: error: ';' expected but 'if' found.
			}if (x==false) return}
                         ^AlgCocktailSort3:18: error: ';' expected but 'if' found.
			}if (x==false) return}
                         ^AlgCocktailSort3:28: error: Unmatched closing brace '}' ignored here
}
^